<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hw2.DeleteActivity">

    <Button
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/SelectExpense"
        android:id="@+id/SelectExpenseDelete"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Expense_Name_label"
        android:id="@+id/textView5"
        android:layout_below="@+id/SelectExpenseDelete"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/ExpenseNameEditTextDelete"
        android:maxLength="@integer/ExpenseName_length"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Category_label"
        android:id="@+id/textView6"
        android:layout_below="@+id/ExpenseNameEditTextDelete"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        style="@android:style/Widget.Spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerDelete"
        android:spinnerMode="dropdown"
        android:prompt="@string/SpinnerCategoryPrompt"
        android:layout_below="@+id/textView6"
        android:layout_toEndOf="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AmountLabel"
        android:id="@+id/textView7"
        android:layout_below="@+id/spinnerDelete"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editTextAmountDelete"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DateLabel"
        android:id="@+id/textView8"
        android:layout_below="@+id/editTextAmountDelete"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textViewDateDelete"
        android:layout_below="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/SelectExpenseDelete"
        android:layout_alignEnd="@+id/SelectExpenseDelete" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/DateImageDelete"
        android:src="@android:drawable/ic_menu_today"
        android:layout_below="@+id/editTextAmountDelete"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Receipt_label"
        android:id="@+id/textView9"
        android:layout_below="@+id/DateImageDelete"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Delete"
        android:id="@+id/DeleteButtonDelete"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView5"
        android:layout_toEndOf="@+id/textView5" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cancel"
        android:id="@+id/CancelButtonDelete"
        android:layout_alignTop="@+id/DeleteButtonDelete"
        android:layout_toLeftOf="@+id/DateImageDelete"
        android:layout_toStartOf="@+id/DateImageDelete" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewReceipt"
        android:layout_toStartOf="@+id/DeleteButtonDelete"
        android:src="@drawable/image_receipt"
        android:layout_below="@+id/textView9"
        android:layout_above="@+id/DeleteButtonDelete"
        android:layout_toLeftOf="@+id/DeleteButtonDelete" />
</RelativeLayout>
