<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hw2.EditActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextExpenseName"
        android:maxLength="@integer/ExpenseName_length"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerCategory"
        android:spinnerMode="dropdown"
        android:prompt="@string/SpinnerCategoryPrompt"
        style="@android:style/Widget.Spinner"
        android:layout_below="@+id/textViewCategory"
        android:layout_toEndOf="@+id/textViewDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Category_label"
        android:id="@+id/textViewCategory"
        android:layout_below="@+id/editTextExpenseName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Expense_Name_label"
        android:id="@+id/textView2"
        android:layout_below="@+id/buttonSelectExpense"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AmountLabel"
        android:id="@+id/textViewAmount"
        android:layout_below="@+id/spinnerCategory"
        android:layout_alignRight="@+id/textViewCategory"
        android:layout_alignEnd="@+id/textViewCategory" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editTextAmount"
        android:layout_below="@+id/textViewAmount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DateLabel"
        android:id="@+id/textView3"
        android:layout_below="@+id/editTextAmount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textViewDate"
        android:layout_below="@+id/textView3"
        android:layout_above="@+id/textView4"
        android:layout_toLeftOf="@+id/buttonCancelExpense"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/imageButtonDate"
        android:src="@android:drawable/ic_menu_today"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:layout_below="@+id/textView3"
        android:layout_toRightOf="@+id/buttonSaveExpense"
        android:layout_toEndOf="@+id/buttonSaveExpense" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Receipt_label"
        android:id="@+id/textView4"
        android:layout_alignBottom="@+id/imageButtonDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SaveLabelButton"
        android:id="@+id/buttonSaveExpense"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CancelButtonLabel"
        android:id="@+id/buttonCancelExpense"
        android:layout_alignTop="@+id/buttonSaveExpense"
        android:layout_alignRight="@+id/imageButtonDate"
        android:layout_alignEnd="@+id/imageButtonDate" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SelectExpenseLabel"
        android:id="@+id/buttonSelectExpense"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:id="@+id/imageViewReceipt"
        android:src="@drawable/image_receipt"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_above="@+id/buttonSaveExpense"
        android:layout_toLeftOf="@+id/buttonSaveExpense"
        android:layout_toStartOf="@+id/buttonSaveExpense" />


</RelativeLayout>
