<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hw2.ShowActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ShowExpense"
        android:id="@+id/textView10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:id="@+id/textView11"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/textView10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewShowName"
        android:layout_alignTop="@+id/textView11"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Category_label"
        android:id="@+id/textView12"
        android:layout_below="@+id/textView11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewShowCategory"
        android:layout_alignTop="@+id/textView12"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AmountLabel"
        android:id="@+id/textView13"
        android:layout_below="@+id/textView12"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewShowAmount"
        android:layout_alignTop="@+id/textView13"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DateLabel"
        android:id="@+id/textView15"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewShowDate"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Receipt_label"
        android:id="@+id/textView14"
        android:layout_below="@+id/textViewShowDate"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FinishButton"
        android:id="@+id/buttonFinishShow"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButtonPrevious"
        android:layout_alignTop="@+id/buttonFinishShow"
        android:layout_toLeftOf="@+id/buttonFinishShow"
        android:layout_toStartOf="@+id/buttonFinishShow"
        android:src="@android:drawable/ic_media_previous" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButtonFirst"
        android:layout_alignTop="@+id/imageButtonPrevious"
        android:layout_toLeftOf="@+id/imageButtonPrevious"
        android:layout_toStartOf="@+id/imageButtonPrevious"
        android:src="@android:drawable/ic_media_rew" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButtonNext"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/buttonFinishShow"
        android:layout_toEndOf="@+id/buttonFinishShow"
        android:src="@android:drawable/ic_media_next"
        android:layout_alignTop="@+id/buttonFinishShow" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButtonLast"
        android:src="@android:drawable/ic_media_ff"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/imageButtonNext"
        android:layout_toEndOf="@+id/imageButtonNext"
        android:layout_alignTop="@+id/imageButtonNext" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewReceipt"
        android:src="@drawable/image_receipt"
        android:layout_above="@+id/buttonFinishShow"
        android:layout_toRightOf="@+id/imageButtonPrevious"
        android:layout_below="@+id/textView14"
        android:layout_alignRight="@+id/textView10"
        android:layout_alignEnd="@+id/textView10" />

</RelativeLayout>
